force-app/main/default/objects/PricebookEntry/fields/C_d_Unidad_de_medida__c.field-meta.xml
<CustomField>
    <fullName>C_d_Unidad_de_medida__c</fullName>
    <label>Cód.Unidad medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAJA</fullName>
            </value>
            <value>
                <fullName>CAPA</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>PALLET</fullName>
            </value>
            <value>
                <fullName>PCS.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>