force-app/main/default/objects/PricebookEntry/fields/ERUM_Codigo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Codigo_de_ventas__c</fullName>
    <label>Código de ventas</label>
    <length>10</length>
    <type>Text</type>
</CustomField>