force-app/main/default/objects/PricebookEntry/fields/ERUM_Fecha_Final__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_Final__c</fullName>
    <label>Fecha Final</label>
    <type>Date</type>
</CustomField>