force-app/main/default/objects/PricebookEntry/fields/ERUM_Fecha_Inicial__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_Inicial__c</fullName>
    <label>Fecha Inicial</label>
    <type>Date</type>
</CustomField>