force-app/main/default/objects/PricebookEntry/fields/ERUM_Incluir_coste_contenedor__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Incluir_coste_contenedor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incluir coste contenedor</label>
    <type>Checkbox</type>
</CustomField>