force-app/main/default/objects/PricebookEntry/fields/ERUM_Nombre_codigo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Nombre_codigo_de_ventas__c</fullName>
    <label>Nombre código de ventas</label>
    <length>10</length>
    <type>Text</type>
</CustomField>