force-app/main/default/objects/PricebookEntry/fields/ERUM_Tipo_de_venta__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tipo_de_venta__c</fullName>
    <label>Tipo de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Grupo precio cliente</fullName>
            </value>
            <value>
                <fullName>Todos los clientes</fullName>
            </value>
            <value>
                <fullName>Campaña</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>