force-app/main/default/objects/PricebookEntry/fields/Id_LineaTarifa__c.field-meta.xml
<CustomField>
    <fullName>Id_LineaTarifa__c</fullName>
    <externalId>true</externalId>
    <label>Id Línea de Tarifa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>