force-app/main/default/objects/PricebookEntry/fields/RFEA_Cod_Homologacion__c.field-meta.xml
<CustomField>
    <fullName>RFEA_Cod_Homologacion__c</fullName>
    <label>Cód. Homologación</label>
    <length>15</length>
    <type>Text</type>
</CustomField>